# xcomfort-python

./: .gitignore  README.md  main.py  pyproject.toml  run_tests.sh
.github/linters/: .ruff.toml
.github/workflows/: pytest.yml  ruff.yml
tests/: __init__.py  test_light.py  test_rctouch.py
xcomfort/: __init__.py  bridge.py  comp.py  connection.py  constants.py  devices.py  room.py
